--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,208 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.app {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  color: white;
+  background-color: #111111;
+}
+
+.visualizer-container {
+  position: absolute;
+  width: 100%;
+  top: 0;
+}
+
+.visualizer {
+  width: 100%;
+  height: 200px;
+  background-color: #333;
+}
+
+.bar {
+  display: inline-block;
+  width: 10px;
+  height: 20px;
+  background-color: #fff;
+  margin: 0 2px;
+  animation: grow 0.1s infinite alternate;
+}
+
+.neon-line {
+  width: 100%;
+  animation: neon-animation 1.5s ease-in-out infinite alternate;
+}
+
+@keyframes neon-animation {
+  0% {
+    opacity: 0.6;
+    text-shadow: none;
+  }
+  100% {
+    opacity: 1;
+    text-shadow: 0 0 10px #00ffff, 0 0 20px #00ffff, 0 0 30px #00ffff,
+      0 0 40px #00ffff, 0 0 50px #00ffff;
+  }
+}
+
+.canvas {
+  position: "absolute";
+  top: 0;
+  left: 0;
+  z-index: -10;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #1e304a;
+  border: 2px solid rgba(225, 225, 225, 0.3);
+  border-radius: 12px;
+  width: 320px;
+  height: 550px;
+}
+
+.header {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.album-image {
+  background-color: aqua;
+  height: 240px;
+  width: 240px;
+}
+
+.player {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+.title {
+  font-size: 18px;
+  font-weight: 700;
+  margin: 2px;
+  margin-top: 10px;
+}
+
+.album {
+  font-size: 16px;
+}
+
+.artist {
+  font-size: 14px;
+  font-weight: 100;
+  margin-bottom: 10px;
+}
+
+.seeker {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 10px;
+  background-color: #1a92a0;
+  outline: none;
+  border-radius: 5px;
+  margin-bottom: 15px;
+}
+
+.seeker::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 10px;
+  height: 10px;
+  background: white;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.controls {
+  display: flex;
+  flex-direction: row;
+  border-radius: 12px;
+  background: linear-gradient(45deg, #176b7d, #1f354d);
+  padding: 12px;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 18px;
+}
+
+.volume {
+  -webkit-appearance: none;
+  width: 70%;
+  height: 10px;
+  background-color: #1a92a0;
+  outline: none;
+  border-radius: 5px;
+  margin: auto;
+}
+
+.volume::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 10px;
+  height: 10px;
+  background: white;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.album-image-back {
+  background-color: aqua;
+  height: 180px;
+  width: 180px;
+}
+
+.album-songs-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  padding: 8px;
+  width: 100%;
+}
+
+.track {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-weight: 500;
+  background: linear-gradient(45deg, #176b7d, #1f354d);
+  border-radius: 8px;
+  width: 80%;
+  height: 35px;
+  padding-left: 14px;
+  font-size: 13px;
+}
+
+.album-title {
+  font-size: 18px;
+  font-weight: 700;
+  margin: 2px;
+  margin-top: 10px;
+}
+
+.album-artist {
+  font-size: 14px;
+  font-weight: 100;
+  margin-top: 8px;
+  margin-bottom: 10px;
 }
