--- a/src/index.css
+++ b/src/index.css
@@ -80,7 +80,12 @@ code {
 .header {
   display: flex;
   width: 100%;
-  justify-content: space-between;
+}
+
+.menu {
+  display: flex;
+  width: 100%;
+  justify-content: flex-end;
 }
 
 .album-image {
