--- a/src/index.css
+++ b/src/index.css
@@ -108,18 +108,21 @@ code {
 
 .album {
   font-size: 16px;
+  margin-top: 5px;
+  white-space: nowrap;
 }
 
 .artist {
   font-size: 14px;
   font-weight: 100;
+  margin-top: 8px;
   margin-bottom: 10px;
 }
 
 .seeker {
   -webkit-appearance: none;
   width: 100%;
-  height: 10px;
+  height: 6px;
   background-color: #1a92a0;
   outline: none;
   border-radius: 5px;
@@ -129,8 +132,8 @@ code {
 .seeker::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
-  width: 10px;
-  height: 10px;
+  width: 6px;
+  height: 6px;
   background: white;
   border-radius: 50%;
   cursor: pointer;
@@ -147,13 +150,13 @@ code {
 .footer {
   display: flex;
   justify-content: space-around;
-  margin-top: 18px;
+  margin-top: 10px;
 }
 
 .volume {
   -webkit-appearance: none;
   width: 70%;
-  height: 10px;
+  height: 6px;
   background-color: #1a92a0;
   outline: none;
   border-radius: 5px;
@@ -163,8 +166,8 @@ code {
 .volume::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
-  width: 10px;
-  height: 10px;
+  width: 6px;
+  height: 6px;
   background: white;
   border-radius: 50%;
   cursor: pointer;
@@ -184,7 +187,27 @@ code {
   padding: 8px;
   width: 100%;
   overflow-y: scroll;
-  scrollbar-width: none;
+  margin-right: 30px;
+}
+
+.album-songs-container::-webkit-scrollbar {
+  margin-right: 15px;
+  width: 0px;
+}
+
+.album-songs-container:hover::-webkit-scrollbar {
+  width: 5px;
+}
+
+.album-songs-container::-webkit-scrollbar-thumb {
+  background-color: rgba(240, 240, 240, 0.4);
+  border-radius: 10px;
+}
+
+.album-songs-container::-webkit-scrollbar-track {
+  background-color: rgba(240, 240, 240, 0.05);
+  height: 80%;
+  border-radius: 10px;
 }
 
 .track {
@@ -198,6 +221,7 @@ code {
   height: 35px;
   padding-left: 14px;
   font-size: 13px;
+  margin-left: 30px;
 }
 
 .album-title {
@@ -212,6 +236,24 @@ code {
   font-weight: 100;
   margin-top: 8px;
   margin-bottom: 10px;
+  white-space: nowrap;
+}
+
+.text-with-line-around {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  width: 90%;
+}
+
+.line {
+  width: 100%;
+  height: 0.25px;
+  background-color: white;
+  margin: 16px 14px;
 }
 
 .swiper {
